--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "firebase": "^10.7.2",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3"
